# nicole

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  a.cc  a.out  aaaaa  ast_types  b.cc  bbbbb  c.cc  change_llvm_version.txt  clangStyleVisitor.cc  clangd_settings.txt  compile_commands.json  fibonacci.cc  grammar  grammar.ebnf  justForMe.txt  lexer  nicole.sh  output.ll  prueba.c  push.sh  trace  unstableClangd  updateIntellisense.sh  visitor_crtp_variant.cc
.github/workflows/: ci.yml  release.yml  sync.yml
automatizeScripts/: a.out  createClass.cc
coverage/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage/inc/: errors.h.func-c.html  errors.h.func.html  errors.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage/inc/lexicalAnalysis/: category.h.func-c.html  category.h.func.html  category.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  lexer.h.func-c.html  lexer.h.func.html  lexer.h.gcov.html  location.h.func-c.html  location.h.func.html  location.h.gcov.html  regexWrapper.h.func-c.html  regexWrapper.h.func.html  regexWrapper.h.gcov.html  sintax.h.func-c.html  sintax.h.func.html  sintax.h.gcov.html  token.h.func-c.html  token.h.func.html  token.h.gcov.html  tokenStream.h.func-c.html  tokenStream.h.func.html  tokenStream.h.gcov.html
coverage/inc/options/: index-sort-f.html  index-sort-l.html  index.html  options.h.func-c.html  options.h.func.html  options.h.gcov.html
coverage/inc/visitors/: index-sort-f.html  index-sort-l.html  index.html  printTree.h.func-c.html  printTree.h.func.html  printTree.h.gcov.html  validateTree.h.func-c.html  validateTree.h.func.html  validateTree.h.gcov.html  visitor.h.func-c.html  visitor.h.func.html  visitor.h.gcov.html
coverage/src/lexicalAnalysis/: index-sort-f.html  index-sort-l.html  index.html  lexer.cc.func-c.html  lexer.cc.func.html  lexer.cc.gcov.html  nicoleSintax.cc.func-c.html  nicoleSintax.cc.func.html  nicoleSintax.cc.gcov.html  tokenStream.cc.func-c.html  tokenStream.cc.func.html  tokenStream.cc.gcov.html  type.cc.func-c.html  type.cc.func.html  type.cc.gcov.html
coverage/src/options/: index-sort-f.html  index-sort-l.html  index.html  optionsParser.cc.func-c.html  optionsParser.cc.func.html  optionsParser.cc.gcov.html
coverage/src/parsingAnalysis/: builder.cc.func-c.html  builder.cc.func.html  builder.cc.gcov.html  checkPosition.cc.func-c.html  checkPosition.cc.func.html  checkPosition.cc.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage/src/visitors/: index-sort-f.html  index-sort-l.html  index.html  printTree.cc.func-c.html  printTree.cc.func.html  printTree.cc.gcov.html  validateTree.cc.func-c.html  validateTree.cc.func.html  validateTree.cc.gcov.html
coverage/test/errors/: index-sort-f.html  index-sort-l.html  index.html  test_error.cc.func-c.html  test_error.cc.func.html  test_error.cc.gcov.html
coverage/test/lexicalAnalysis/: index-sort-f.html  (+23 more)
dockerInstall/: Dockerfile
docs/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
docs/coverage/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
docs/inc/: errors.h.func-c.html  errors.h.func.html  errors.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
examples/: a.nc  typeTesting.nc
examples/codeGen/: conditionals.nc  enum.nc  factorial.nc  fooo.nc  functions.nc  literals.nc  loops.nc  operations.nc  sobrecarga.nc  userTypes.nc  varDecl.nc  vectors.nc
examples/functions/: dummyForImport.nc
examples/loops/: matrix.nc
examples/operations/: opWithLiterals.nc
examples/typeTesting/: codeGen.nc  mono.nc  strings.nc  vOption.nc  validate.nc  varDecl.nc
images/docs/: index-sort-l.html  index.html
inc/: errors.h  erros.h
inc/compiler/: compiler.h  nicole.h
inc/lexer/: category.h  lexer.h  regexWrapper.h  token.h  tokenType.h  type.h
inc/lexicalAnalysis/: category.h  lexer.h  location.h  nicoleSintax.h  regexWrapper.h  sintax.h  sourceLocation.h  tokeStream.h  token.h  tokenStream.h  type.h
inc/options/: options.h  optionsParser.h
inc/parser/: node.h  nodeBinary.h  nodeLiteral.h  nodeLiteralBool.h  nodeLiteralChar.h  nodeLiteralDouble.h  nodeLiteralInt.h  nodeLiteralString.h  nodeType.h  parser.h
inc/parsingAnalysis/: builder.h  checkPosition.h  node.h  nodeType.h
inc/symbolTable/: enumSymbol.h  functionSymbol.h  scope.h  symbol.h  symbolTable.h  typeSymbol.h  variableSymbol.h
inc/tables/: symbol.h
inc/visitors/: codeGeneration.h  fillScopes.h  fillSemanticInfo.h  fillSymbolTable.h  monomorphize.h  printTree.h  typeAnalysis.h  validateTree.h  visitor.h
nicoleScripts/: a.nc  dev2.nc  devTest.nc
nicoleScripts/unmatched/: unmatched.nc
nicoleScripts/userTypes/: classes.nc
src/: b.cc  main.cc  main2.cc  original.cc
src/compiler/: compiler.cc  nicole.cc
src/lexer/: category.cc  lexer.cc  tokenType.cc
src/lexicalAnalysis/: lexer.cc  nicoleSintax.cc  tokenStream.cc  type.cc
src/options/: optionsParser.cc
src/parser/: nodeBinary.cc  nodeLiteral.cc  nodeLiteralBool.cc  nodeLiteralChar.cc  nodeLiteralDouble.cc  nodeLiteralInt.cc  nodeLiteralString.cc  parser.cc
src/parsingAnalysis/: builder.cc  checkPosition.cc
src/visitors/: codeGeneration.cc  fillScopes.cc  fillSemanticInfo.cc  monomorphize.cc  printTree.cc  typeAnalysis.cc  validateTree.cc
test/: test.cc  test1.cc  test1.nc  test2.nc
test/conditionals/: conditionals.nc  switch.nc
test/errors/: test_error.cc
test/imports/: import1.nc  import2.nc
test/lexicalAnalysis/: test_category.cc  test_lexer.cc  test_location.cc  test_regexWrapper.cc  test_sintax.cc  test_token.cc  test_tokenStream.cc
test/operations/: opWithVariables.nc
test/options/: test_options.cc  test_optionsParser.cc
test/parsingAnalysis/: test_ast_assignment.cc  test_ast_binary.cc  test_ast_conditionals.cc  test_ast_functions.cc  test_ast_literals.cc  test_ast_loops.cc  test_ast_pointers.cc  test_ast_statements.cc  test_ast_unary.cc  test_ast_utils.cc  test_ast_variables.cc  test_ast_vector.cc
test/userTypes/: nestedTypes.nc  point.nc
test/variables/: auto.nc
(+2384 files in other folders)
